--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <script>
         // Event listener for "Go to Login" button
         document.getElementById('goToLogin').addEventListener('click', function () {
-            window.location.href = 'login.html'; // Redirects to login.html
+            window.location.href = 'Login.html'; // Redirects to login.html
         });
     </script>
 </body>
