--- a/Main.html
+++ b/Main.html
@@ -82,7 +82,7 @@
         // Redirect the user to store.html when the button is clicked
         window.location.href = "store.html";
     });</script>
-    <script type="module" src="main.js"> </script>
+    <script type="module" src="Main.js"> </script>
 </body>
 
 </html>
