--- a/Main.html
+++ b/Main.html
@@ -80,7 +80,7 @@
     <script type="module" src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
 <script>document.getElementById("StoreBtn").addEventListener("click", function () {
         // Redirect the user to store.html when the button is clicked
-        window.location.href = "store.html";
+        window.location.href = "Store.html";
     });</script>
     <script type="module" src="Main.js"> </script>
 </body>
